Now we call them Campaign Stages instead of Campaign Layers

--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -133,8 +133,8 @@
 
 <div class="ui modal" id="definition_add_edit_modal">
   <i class="close icon"></i>
-  <h3 class="block header" id="ae_experiment">
-    Job Type Editor
+  <h3 class="block header"><span id="ae_experiment">
+    Job Type Editor </span> {%include 'help_button.html'%}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
