--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -9,7 +9,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stages</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{name}}</a>
   <div class="divider"> / </div>
