--- a/webservice/templates/jobs_eff_histo.html
+++ b/webservice/templates/jobs_eff_histo.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS:Job efficiency in Campaign Layer {{campaign_id}} </title>
+    <title>POMS:Job efficiency in Campaign Stage {{campaign_id}} </title>
 {%endblock%}
 
 
@@ -9,7 +9,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stage</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{c.name}}</a>
   <div class="divider"> / </div>
