--- a/webservice/templates/launch_template_edit.html
+++ b/webservice/templates/launch_template_edit.html
@@ -117,8 +117,8 @@
 
 <div class="ui modal" id="template_add_edit_modal">
   <i class="close icon"></i>
-  <h3 class="block header" id="template_header">
-    Launch Template Editor
+  <h3 class="block header"><span id="template_header">
+    Launch Template Editor </span> {%include 'help_button.html'%}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
