--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -8,7 +8,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stage</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in Submission {{task_id}}</a>
   <div class="divider"> / </div>
