--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -204,7 +204,7 @@ $(function() {
 <br/>
 <div class="ui checkbox" style="padding-bottom:5px;">
   <input type="checkbox" name="campaign_checkbox" {{filtered_fields.get("campaign_checkbox")}}>
-  <label style="color:white;"><b>Campaign Layer</b></label>
+  <label style="color:white;"><b>Campaign Stage</b></label>
 </div>
 
 <br/>
