--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -41,7 +41,7 @@
 <table class="ui sortable celled table">
   <thead>
     <tr>
-      <th class="">Campaign Layer Name</th>
+      <th class="">Campaign Stage Name</th>
       <th class="">Experiment</th>
     </tr>
   </thead>
