--- a/webservice/templates/show_task_jobs.html
+++ b/webservice/templates/show_task_jobs.html
@@ -9,9 +9,9 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stages</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/campaign_time_bars?campaign_id={{campaign_id}}" class="section">Campaign Layer {{cname}}</a>
+  <a href="{{pomspath}}/campaign_time_bars?campaign_id={{campaign_id}}" class="section">Campaign Stage {{cname}}</a>
   <div class="divider"> / </div>
   <div class="section">Jobs in submission {{taskid}}</div>
 </div>
