--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -8,7 +8,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Layers</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stages</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/campaign_time_bars/campaign_id=?{{job_info.Campaign.campaign_id}}" class="section">Campaign_Layer {{job_info.Campaign.name}}</a>
   <div class="divider"> / </div>
@@ -154,7 +154,7 @@
       </tr>
       
       <tr>
-        <td>Campaign Layer</td>
+        <td>Campaign Stage</td>
         <td>
           <p>{{job_info.Campaign.name}}</p>
         </td>
