--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -206,7 +206,7 @@
 	</div>
 
 	<div class="field">
-          <label>Completion pct</label>
+          <label>Completion %</label>
           <input type="text" id="ae_completion_pct" name="ae_completion_pct" placeholder="95">
 	</div>
       </div>
