--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Standard Meta -->
         {%if do_refresh %}
-        <meta http-equiv="refresh" content="300" />
+        <meta http-equiv="refresh" content="{{do_refresh}}" />
         {% endif %}
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
