working on python 3...

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -359,7 +359,7 @@
                             <td colspan="3">
                                 <table>
                                     <tbody>
-                                        {% for key, value in record_meat.iteritems() %}
+                                        {% for key, value in record_meat.items() %}
                                         <tr>
                                             <td><b>{{ key|e }}</b></td>
                                             <td width="1%" style="display:none;"></td>
