first stab at prettying up dependecny stuff

--- a/webservice/templates/campaign_deps.html
+++ b/webservice/templates/campaign_deps.html
@@ -30,9 +30,9 @@
 
 {%block content %}
 
-<div>
- <svg>{{svgdata}}</svg>
-</div>
+<svg style="width:100%; border: 1px solid grey; padding: 1em;">
+   {{svgdata}}
+</svg>
 
 {%endblock%}
 
