--- a/webservice/templates/help_button.html
+++ b/webservice/templates/help_button.html
@@ -1,3 +1,5 @@
-  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/{{help_page}}">
-    <i class="icon help circle link"></i>
+  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/{{help_page}}{{anchor}}">
+    <i style="float: none" class="icon help circle link tooltip">
+      {{ '<span class="tooltiptext">' ~ hint ~ ' (see more...)' ~ '</span>' if hint }}
+    </i>
   </a>
