--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -96,7 +96,7 @@
  dbg: {{dbg}}
 -->
 
-  <div class="ui">
+  <div id="double-scroll" class="ui scrollable">
 
 
    <table class="ui celled table unstackable">
@@ -223,9 +223,13 @@ $('.ui.dropdown')
 
 
 <script>
-$(function() {
-    $('#global_datepicker_container').show();
-});
+   $(function() {
+       $('#global_datepicker_container').show();
+   });
+
+   $(document).ready(function(){
+     $('#double-scroll').doubleScroll();
+   });
 </script>
 
 {%endblock%}
